RESOLVED FIXED105270
[Qt] Fix the ARMv7 build after r137976
https://bugs.webkit.org/show_bug.cgi?id=105270
Summary [Qt] Fix the ARMv7 build after r137976
Csaba Osztrogonác
Reported 2012-12-18 02:25:35 PST
The ARMv7 build is failing on r138001 with the following error message: /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/dfg/DFGOSRExit.cpp: In member function 'JSC::AbstractMacroAssembler<JSC::ARMv7Assembler>::Jump JSC::DFG::OSRExit::getPatchableCodeOffsetAsJump() const': /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/dfg/DFGOSRExit.cpp:60:70: error: no matching function for call to 'JSC::AbstractMacroAssembler<JSC::ARMv7Assembler>::Jump::Jump(JSC::AssemblerLabel)' /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/dfg/DFGOSRExit.cpp:60:70: note: candidates are: In file included from /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/MacroAssemblerARMv7.h:33:0, from /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/MacroAssembler.h:34, from /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/bytecode/ValueRecovery.h:31, from /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/bytecode/CodeOrigin.h:31, from /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/dfg/DFGOSRExit.h:33, from /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/dfg/DFGOSRExit.cpp:27: /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/AbstractMacroAssembler.h:513:9: note: JSC::AbstractMacroAssembler<AssemblerType>::Jump::Jump(JSC::AssemblerLabel, JSC::ARMv7Assembler::JumpType, JSC::ARMv7Assembler::Condition) [with AssemblerType = JSC::ARMv7Assembler] /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/AbstractMacroAssembler.h:513:9: note: candidate expects 3 arguments, 1 provided /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/AbstractMacroAssembler.h:507:9: note: JSC::AbstractMacroAssembler<AssemblerType>::Jump::Jump() [with AssemblerType = JSC::ARMv7Assembler] /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/AbstractMacroAssembler.h:507:9: note: candidate expects 0 arguments, 1 provided /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/AbstractMacroAssembler.h:500:11: note: JSC::AbstractMacroAssembler<JSC::ARMv7Assembler>::Jump::Jump(const JSC::AbstractMacroAssembler<JSC::ARMv7Assembler>::Jump&) /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/AbstractMacroAssembler.h:500:11: note: no known conversion for argument 1 from 'JSC::AssemblerLabel' to 'const JSC::AbstractMacroAssembler<JSC::ARMv7Assembler>::Jump&' /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/dfg/DFGOSRExit.cpp:61:1: warning: control reaches end of non-void function [-Wreturn-type]
Attachments
Patch (1.50 KB, patch)
2012-12-18 09:10 PST, Michael Saboff
no flags
Csaba Osztrogonác
Comment 1 2012-12-18 02:33:59 PST
I managed to find the culprit - https://trac.webkit.org/changeset/137976 broke the build.
Michael Saboff
Comment 2 2012-12-18 09:10:13 PST
Created attachment 179957 [details] Patch Could someone on the Qt team verify that this fixes the build?
Csaba Osztrogonác
Comment 3 2012-12-18 09:16:24 PST
(In reply to comment #2) > Created an attachment (id=179957) [details] > Patch > > Could someone on the Qt team verify that this fixes the build? Sure, I'll check it.
Csaba Osztrogonác
Comment 4 2012-12-18 09:23:33 PST
Comment on attachment 179957 [details] Patch Build works fine with it, so r=me. Thanks for the quick fix.
Michael Saboff
Comment 5 2012-12-18 09:25:15 PST
(In reply to comment #4) > (From update of attachment 179957 [details]) > Build works fine with it, so r=me. Thanks for the quick fix. Great. Sorry I didn't check the ARMv7 case before posting the original.
WebKit Review Bot
Comment 6 2012-12-18 09:56:46 PST
Comment on attachment 179957 [details] Patch Clearing flags on attachment: 179957 Committed r138032: <http://trac.webkit.org/changeset/138032>
WebKit Review Bot
Comment 7 2012-12-18 09:56:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.