[Qt] Fix the ARMv7 build after r137976 https://bugs.webkit.org/show_bug.cgi?id=105270

Reviewed by Csaba Osztrogonác.

Add default value for Jump parameter to fix build.

* assembler/AbstractMacroAssembler.h:
(JSC::AbstractMacroAssembler::Jump::Jump):


Canonical link: https://commits.webkit.org/123536@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138032 268f45cc-cd09-0410-ab3c-d52691b4dbfc